--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.1.0",
     "bootstrap": "^5.3.0-alpha3",
     "bootstrap-icons": "^1.10.4",
+    "googleapis": "^114.0.0",
     "ng-image-slider": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
